[package]
name = "powersoftau"
version = "0.2.0"
authors = ["Sean Bowe", "Alex Vlasov", "The Aleo Team <hello@aleo.org>"]
description = "Communal zk-SNARK MPC for Public Parameters"
homepage = "https://github.com/AleoHQ/snark-setup"
repository = "https://github.com/AleoHQ/snark-setup"
license = "MIT/Apache-2.0"
edition = "2018"

[[bench]]
name = "accumulator"
harness = false

[dependencies]
snark-utils = { path = "../snark-utils", features = ["parallel"] }

zexe_algebra = { git = "https://github.com/scipr-lab/zexe", package = "algebra", version = "0.1.0", features = ["parallel", "bw6_761", "derive"] }

memmap = { version = "0.7.0" }
itertools = { version = "0.8.0" }
rand = { version = "0.7" }
rayon = { version = "1.3.0" }

# Used for the CLIs
gumdrop = "0.7.0"
hex-literal = "0.1.4"
tracing = "0.1.13"
tracing-subscriber = "0.2.3"

[dev-dependencies]
test-helpers = { path = "../test-helpers" }

snarkos-models = { path = "../../snarkOS/models" }
snarkos-curves = { path = "../../snarkOS/curves" }
snarkos-utilities = { path = "../../snarkOS/utilities" }

zexe_algebra = { git = "https://github.com/scipr-lab/zexe", package = "algebra", version = "0.1.0", features = ["parallel", "full", "derive"] }
zexe_algebra_core = { git = "https://github.com/scipr-lab/zexe", package = "algebra-core", version = "0.1.0", features = ["parallel", "derive"] }

anyhow = { version = "1.0.31" }
criterion = { version = "0.3" }
