[package]
name = "powersoftau"
version = "0.2.0"
authors = ["Sean Bowe", "Alex Vlasov", "The Aleo Team <hello@aleo.org>"]
description = "Communal zk-SNARK MPC for Public Parameters"
homepage = "https://github.com/AleoHQ/snark-setup"
repository = "https://github.com/AleoHQ/snark-setup"
license = "MIT/Apache-2.0"
edition = "2018"

[[bench]]
name = "accumulator"
harness = false

[dependencies]
snark-utils = { path = "../snark-utils", features = ["parallel"] }

zexe_algebra = { git = "https://github.com/scipr-lab/zexe", package = "algebra", version = "0.1.0", features = ["parallel", "bw6_761", "derive"] }

gumdrop = { version = "0.7.0" }
hex-literal = { version = "0.1.4" }
memmap = { version = "0.7.0" }
itertools = { version = "0.8.0" }
rand = { version = "0.7" }
rayon = { version = "1.3.0" }
tracing = { version = "0.1.13" }
tracing-subscriber = { version = "0.2.3" }

[dev-dependencies]
test-helpers = { path = "../test-helpers" }

snarkos-models = { path = "../../snarkOS/models", default-features = false }
snarkos-curves = { path = "../../snarkOS/curves", default-features = false }
snarkos-utilities = { path = "../../snarkOS/utilities", default-features = false }

zexe_algebra = { git = "https://github.com/scipr-lab/zexe", package = "algebra", version = "0.1.0", features = ["parallel", "full", "derive"] }
zexe_algebra_core = { git = "https://github.com/scipr-lab/zexe", package = "algebra-core", version = "0.1.0", features = ["parallel", "derive"] }

anyhow = { version = "1.0.31" }
criterion = { version = "0.3" }
rusty-hook = { version = "0.11.2" }

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
debug-assertions = true
debug = true
