[package]
name = "setup-utils"
version = "0.3.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>", "The Aleo Team <hello@aleo.org>"]
edition = "2018"

[[bench]]
name = "io"
harness = false
required-features = ["phase1"]

[[bench]]
name = "math"
harness = false

[dependencies]
snarkvm-algorithms = { version = "0.6" }
snarkvm-curves = { version = "0.6" }
snarkvm-fields = { version = "0.6" }
snarkvm-r1cs = { version = "0.6" }
snarkvm-utilities = { version = "0.6" }

blake2 = { version = "0.8.1" }
blake2s_simd = { version = "0.5.11" }
cfg-if = { version = "0.1.10" }
crossbeam = { version = "0.8.0" }
num_cpus = { version = "1.12.0" }
rand = { version = "0.8" }
rand_chacha = { version = "0.3" }
rayon = { version = "1.4.1", optional = true }
rust-crypto = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0.22" }
tracing = { version = "0.1.21" }
typenum = { version = "1.11.2" }

[dev-dependencies]
phase1 = { path = "../phase1", features = ["testing"] }

criterion = { version = "0.3.1" }
rusty-hook = { version = "0.11.2" }

[features]
default = ["parallel"]
cli = ["parallel", "rust-crypto"]
wasm = []

parallel = ["rayon", "snarkvm-algorithms/parallel"]
