[package]
name = "setup-utils"
version = "0.3.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>", "The Aleo Team <hello@aleo.org>"]
edition = "2018"

[[bench]]
name = "io"
harness = false
required-features = ["phase1"]

[[bench]]
name = "math"
harness = false

[dependencies]
snarkvm-algorithms = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2", default-features = false, features = ["fft", "hash_to_curve", "crypto_hash", "blake2"]  }
snarkvm-curves = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }
snarkvm-fields = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }
snarkvm-r1cs = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }
snarkvm-utilities = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2", default-features = false }

blake2 = "0.9"
blake2s_simd = { version = "0.5.11" }
cfg-if = "1.0"
crossbeam = { version = "0.8.0" }
generic-array = { version = "0.14", features = ["more_lengths"] }
futures = "0.3"
hex = { version = "0.4.3" }
num_cpus = { version = "1.12.0" }
rand = { version = "0.8" }
rand_chacha = { version = "0.3" }
rayon = { version = "1.4.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9.8"
thiserror = { version = "1.0.22" }
tracing = { version = "0.1.21" }

[dev-dependencies]
phase1 = { path = "../phase1", features = ["testing"] }

criterion = { version = "0.3.1" }
rusty-hook = { version = "0.11.2" }

[features]
default = []
cli = ["parallel"]
wasm = ["snarkvm-algorithms/wasm"]
parallel = ["rayon", "snarkvm-algorithms/parallel"]
