[package]
name = "setup1-cli-tools"
version = "0.1.0"
authors = ["The Aleo Team <hello@aleo.org>"]
edition = "2018"

[[bin]]
name = "public-key-extractor"
path = "src/public_key_extractor.rs"

[[bin]]
name = "view-key"
path = "src/view_key.rs"

[dependencies]
snarkvm-dpc = { git = "https://github.com/AleoHQ/snarkVM", rev = "092dfd2" }

anyhow = "1.0.38"
age = { version = "0.7", features = ["cli-common", "armor", "plugin"] }
hex = "0.4"
rand = "0.8"
secrecy = "0.8"
serde = "1.0.123"
serde_json = "1.0.64"
structopt = "0.3.21"
unic-langid = "0.9.0"
