[package]
name = "setup1-contributor"
version = "0.4.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Aleo Setup Contributor"
homepage = "https://github.com/AleoHQ/aleo-setup"
repository = "https://github.com/AleoHQ/aleo-setup"
edition = "2018"

[dependencies]
phase1 = { path = "../phase1", features = ["parallel"] }
phase1-cli = { path = "../phase1-cli", features = ["parallel"] }
phase1-coordinator = { path = "../phase1-coordinator", features = ["operator", "parallel"]}
setup1-shared = { path = "../setup1-shared", features = ["twitter", "proof-of-work"] }
setup-utils = { path = "../setup-utils", features = ["parallel"] }


snarkvm-dpc = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }
snarkvm-curves  = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }
snarkvm-utilities = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }

age = { version = "0.7", features = [ "cli-common", "armor", "plugin" ] }
anyhow = { version = "1.0.33" }
blake2 = "0.9"
clap = { version = "2.33.3" }
dialoguer = "0.9"
egg-mode = "0.16"
fs-err = "2.6"
futures = { version = "0.3" }
futures-util = { version = "0.3.15", default-features = false, features = ["async-await", "sink", "std"] }
hex = { version = "0.4" }
http = "0.2"
i18n-embed = { version = "0.13", features = ["desktop-requester"] }
indicatif = { version = "0.16" }
panic-control = {version = "0.1.4" }
rand = { version = "0.8" }
regex = "1"
reqwest = "0.11"
secrecy = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serial_test = { version = "0.5.1" }
structopt = { version = "0.3" }
thiserror = { version = "1.0" }
tokio = { version = "1.13", features = [ "macros", "rt-multi-thread" ] }
tokio-tungstenite = { version = "0.15.0", features = ["native-tls"] }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3" }
url = { version = "2.2" }

