[package]
name = "setup1-shared"
version = "0.1.0"
authors = ["The Aleo Team <hello@aleo.org>"]
edition = "2018"

[features]
default = []
async_message = ["tokio"]
twitter = ["egg-mode"]
proof-of-work = ["phase1", "setup-utils", "snarkvm-curves"]

[dependencies]
phase1 = { path = "../phase1", features = ["parallel"], optional = true }
setup-utils = { path = "../setup-utils", features = ["parallel"], optional = true }

snarkvm-curves = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2", optional = true }

egg-mode = { version = "0.16", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.13", features = ["io-util"], optional = true }
