[package]
name = "setup1-verifier"
version = "0.4.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Verifier implementation of Phase 1"
homepage = "https://github.com/AleoHQ/aleo-setup"
repository = "https://github.com/AleoHQ/aleo-setup"
license = "MIT/Apache-2.0"
edition = "2018"

[[bin]]
name = "setup1-verifier"
path = "src/main.rs"

[dependencies]
phase1 = { path = "../phase1" }
phase1-cli = { path = "../phase1-cli" }
phase1-coordinator = { path = "../phase1-coordinator", features= ["operator"] }
setup1-shared = { version = "0.1", path = "../setup1-shared" }
setup-utils = { path = "../setup-utils", default-features = false }

snarkos-toolkit = { git = "https://github.com/AleoHQ/snarkOS", rev = "6357695", package = "snarkos-toolkit", default-features = false }
snarkvm-curves = { version = "0.6" }

anyhow = { version = "1.0.32" }
chrono = { version = "0.4", features = ["serde"] }
ctrlc = { version = "3.1.7" }
futures-util = { version = "0.3.5" }
hex = { version = "0.4.2" }
http = "0.2"
rand = { version = "0.7.3" }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_derive = { version = "1.0" }
structopt = "0.3.21"
thiserror = { version = "1.0" }
tokio = { version = "1.7", features = ["macros", "rt-multi-thread", "signal"] }
tracing = { version = "0.1.26" }
tracing-subscriber = { version = "0.2" }
url = "2.2.2"

[dev-dependencies]
lazy_static = { version = "1.4.0" }
rand_xorshift = { version = "0.2" }
serial_test = { version = "0.5" }
