[package]
name = "setup1-verifier"
version = "0.4.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Verifier implementation of Phase 1"
homepage = "https://github.com/AleoHQ/aleo-setup"
repository = "https://github.com/AleoHQ/aleo-setup"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
phase1 = { path = "../phase1", features = ["parallel"] }
phase1-cli = { path = "../phase1-cli", features = ["parallel"] }
phase1-coordinator = { path = "../phase1-coordinator", features= ["operator", "parallel"] }
setup1-shared = { version = "0.1", path = "../setup1-shared" }
setup-utils = { path = "../setup-utils", features = ["parallel"] }


snarkvm-algorithms = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2", features = ["parallel"] }
snarkvm-dpc = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }
snarkvm-curves = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }
snarkvm-utilities = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }

anyhow = { version = "1.0.32" }
ctrlc = { version = "3.1.7" }
fs-err = { version = "2.6" }
futures-util = { version = "0.3.5" }
hex = { version = "0.4.2" }
http = "0.2"
rand = { version = "0.8" }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
structopt = "0.3.21"
thiserror = { version = "1.0" }
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.26" }
tracing-subscriber = { version = "0.3" }
url = "2.2.2"

[dev-dependencies]
rand_xorshift = { version = "0.3" }
