[package]
name = "setup2"
version = "0.3.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>", "The Aleo Team <hello@aleo.org>"]
description = "Aleo Setup II"
homepage = "https://github.com/AleoHQ/aleo-setup"
repository = "https://github.com/AleoHQ/aleo-setup"
license = "GPL-3.0"
edition = "2018"

[dependencies]
phase2 = { path = "../phase2", default-features = false }
setup-utils = { path = "../setup-utils", default-features = false }

snarkvm-algorithms = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "fc997c", default-features = false }
snarkvm-curves = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "fc997c" }
snarkvm-dpc = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "fc997c" }
snarkvm-fields = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "fc997c" }
snarkvm-parameters = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "fc997c" }
snarkvm-r1cs = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "fc997c" }
snarkvm-utilities = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "fc997c" }

anyhow = { version = "1.0.37" }
cfg-if = { version = "0.1.10" }
gumdrop = { version = "0.8.0", optional = true }
hex = { version = "0.4.2" }
hex-literal = { version = "0.3.1", optional = true }
memmap = { version = "0.7.0", optional = true }
rand = { version = "0.8" }
rand_chacha = { version = "0.3" }
thiserror = { version = "1.0.22" }
tracing-subscriber = { version = "0.2.3" }

[features]
default = ["cli"]
parallel = ["phase2/parallel", "setup-utils/parallel"]

cli = ["gumdrop", "hex-literal", "memmap", "parallel", "phase2/cli", "setup-utils/cli"]
wasm = ["phase2/wasm", "setup-utils/wasm"]
