[package]
name = "setup2"
version = "0.3.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>", "The Aleo Team <hello@aleo.org>"]
description = "Aleo Setup II"
homepage = "https://github.com/AleoHQ/aleo-setup"
repository = "https://github.com/AleoHQ/aleo-setup"
license = "GPL-3.0"
edition = "2018"

[dependencies]
phase2 = { path = "../phase2", features = ["cli"] }
setup-utils = { path = "../setup-utils", features = [ "cli" ] }

snarkvm-algorithms = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }
snarkvm-curves = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }
snarkvm-dpc = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }
snarkvm-fields = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }
snarkvm-parameters = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }
snarkvm-r1cs = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }
snarkvm-utilities = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }

anyhow = { version = "1.0.37" }
cfg-if = "1.0"
fs-err = { version = "2.6" }
gumdrop = { version = "0.8.0", optional = true }
hex = { version = "0.4.2" }
hex-literal = { version = "0.3.1", optional = true }
memmap = { version = "0.7.0", optional = true }
rand = { version = "0.8" }
rand_chacha = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0.22" }
tracing = { version = "0.1.21" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

[features]
default = ["cli"]
parallel = ["phase2/parallel", "setup-utils/parallel"]
cli = ["gumdrop", "hex-literal", "memmap", "parallel", "phase2/cli", "setup-utils/cli"]
wasm = ["phase2/wasm", "setup-utils/wasm"]

[[bin]]
name = "phase2"
required-features = ["cli"]