[package]
name = "snark-utils"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>", "The Aleo Team <hello@aleo.org>"]
edition = "2018"

[[bench]]
name = "io"
harness = false

[[bench]]
name = "math"
harness = false

[dependencies]
zexe_algebra = { package = "algebra", git = "https://github.com/scipr-lab/zexe", version = "0.1.0", features = ["parallel"] }
zexe_fft = { package = "ff-fft", git = "https://github.com/scipr-lab/zexe", version = "0.1.0", features = ["parallel"] }
zexe_r1cs_core = { package = "r1cs-core", git = "https://github.com/scipr-lab/zexe", version = "0.1.0" }

blake2 = { version = "0.8.1" }
crossbeam = { version = "0.7.3" }
num_cpus = { version = "1.12.0" }
rand = { version = "0.7.3" }
rand_chacha = { version = "0.2.1" }
rayon = { version = "1.3.0", optional = true }
rust-crypto = { version = "0.2" }
thiserror = { version = "1.0.11" }
tracing = { version = "0.1.13" }
typenum = { version = "1.11.2" }

[dev-dependencies]
powersoftau = { path = "../powersoftau" }
test-helpers = { path = "../test-helpers" }

zexe_algebra = { package = "algebra", git = "https://github.com/scipr-lab/zexe", version = "0.1.0", features = ["parallel", "full"] }

criterion = { version = "0.3.1" }
rusty-hook = { version = "0.11.2" }

[features]
default = []
parallel = ["rayon", "zexe_algebra/parallel", "zexe_fft/parallel"]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
debug-assertions = true
debug = true
